--- a/src/app/home/sidebar/sidebar.component.html
+++ b/src/app/home/sidebar/sidebar.component.html
@@ -3,15 +3,15 @@
         <div class="collapse navbar-collapse">
             <ul class="flex-md-column flex-row navbar-nav w-100 justify-content-between">
                 <li class="nav-item">
-                    <a class="nav-link pl-0 text-nowrap" href="#"><i class="fa fa-bullseye fa-fw"></i> <span class="font-weight-bold">Brand</span></a>
+                    <a class="nav-link pl-0 text-nowrap" href="#"><i class="fa fa-bullseye fa-fw"></i> <span class="font-weight-bold">E-Commerce</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pl-0" href="#"><i class="fa fa-heart-o fa-fw"></i> <span class="d-none d-md-inline">Link</span></a>
+                    <a class="nav-link pl-0" [routerLink]='["login"]'><i class="fa fa-heart-o fa-fw"></i> <span class="d-none d-md-inline">Login</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link pl-0" href="#"><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Link</span></a>
+                    <a class="nav-link pl-0" [routerLink]='["inscription"]'><i class="fa fa-book fa-fw"></i> <span class="d-none d-md-inline">Inscription</span></a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a class="nav-link pl-0" href="#"><i class="fa fa-heart fa-fw"></i> <span class="d-none d-md-inline">Link</span></a>
                 </li>
                 <li class="nav-item">
@@ -19,7 +19,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link pl-0" href="#"><i class="fa fa-list fa-fw"></i> <span class="d-none d-md-inline">Link</span></a>
-                </li>
+                </li> -->
             </ul>
         </div>
     </nav>
