--- a/src/app/home/container/inscription/inscription.component.html
+++ b/src/app/home/container/inscription/inscription.component.html
@@ -14,7 +14,7 @@
             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                 <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-user"></i></div>
                 <input type="text" name="name" class="form-control" id="name"
-                       placeholder="John Doe" required autofocus>
+                       placeholder="John Doe" required autofocus [(ngModel)]="user.name">
             </div>
         </div>
     </div>
@@ -35,7 +35,7 @@
             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                 <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-at"></i></div>
                 <input type="text" name="email" class="form-control" id="email"
-                       placeholder="you@example.com" required autofocus>
+                       placeholder="you@example.com" required autofocus [(ngModel)]="user.email">
             </div>
         </div>
     </div>
@@ -56,7 +56,7 @@
             <div class="input-group mb-2 mr-sm-2 mb-sm-0">
                 <div class="input-group-addon" style="width: 2.6rem"><i class="fa fa-key"></i></div>
                 <input type="password" name="password" class="form-control" id="password"
-                       placeholder="Password" required>
+                       placeholder="Password" required [(ngModel)]="user.password">
             </div>
         </div>
     </div>
@@ -87,6 +87,6 @@
 <div class="row">
     <div class="col-md-3"></div>
     <div class="col-md-6">
-        <button type="submit" class="btn btn-success"><i class="fa fa-user-plus"></i> Register</button>
+        <button type="submit" class="btn btn-success" (click)="saveUser()"><i class="fa fa-user-plus"></i> Register</button>
     </div>
 </div>
