add services and translate module

--- a/src/app/home/container/dashboard/dashboard.component.html
+++ b/src/app/home/container/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 
 <div class="constainer">
-  <h1>Liste des Produits</h1>
+  <h1>{{'title' | translate}}</h1>
   <table class="table">
     <thead>
       <tr>
