--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,11 @@
-<app-navbar></app-navbar>
+<app-navbar *ngIf="location"></app-navbar>
   <div class="row h-100">
     
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="location">
       <app-sidebar></app-sidebar>
     </div>
 
-    <div class="col-md-9">
+    <div [ngClass]="{'col-md-9':location,'col-md-12':!location}">
         <app-container></app-container>
     </div>
 
