--- a/src/app/home/container/login/login.component.html
+++ b/src/app/home/container/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="example-container">
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Email">
+      <input matInput placeholder="Email" [(ngModel)]='email'>
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
-        <input matInput placeholder="Favorite food" value="Sushi" type="password">
+        <input matInput placeholder="Favorite food" value="Sushi" type="password" [(ngModel)]='passowrd'>
     </mat-form-field>
+    <button mat-raised-button color="accent" (click)='login(email,passowrd)'>login</button>
 
 </div>
 
-<button mat-raised-button color="accent">Accent</button>
-<button mat-raised-button color="warn">Warn</button>
+<!-- <button mat-raised-button color="warn">Warn</button> -->
